--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,12 @@
         <activity
             android:name=".movieInfo.view.MovieActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme"
             android:parentActivityName=".DashboardActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".seeAllCasts.view.CastCrewActivity" android:parentActivityName=".DashboardActivity"
+        <activity android:name=".seeAllCasts.view.CastCrewActivity"
+            android:parentActivityName=".DashboardActivity"
             android:screenOrientation="portrait"></activity>
 
         <receiver android:name=".components.NetworkChangeReceiver">
